fixed and optimized a few styles. it's still a mess. But it's getting there adjusted gaps and margins mostly. As always trying to remove as many statements as possible

--- a/bot/modules/webserver/static/lcars/100-variables.css
+++ b/bot/modules/webserver/static/lcars/100-variables.css
@@ -63,7 +63,7 @@
     --main_area_height: calc(
         100vh
         - var(--main_shoulder_height) * 2
-        - 1em
+        - var(--main_table_gutter) * 2
     )
 }
 
